@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Fixed the `avg_losses-stats`: they were not generated in absence of
+    loss curves
   * Added a view displaying the calculation times by source typology
   * Fixed the test of GMPETable after the correction in hazardlib
   * Optimized the saving of the asset loss table
